; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/test/extr_regress_finalize.c_timer_callback_2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/test/extr_regress_finalize.c_timer_callback_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_and_count = type { i32, i32, i32 }

@event_finalize_callback_2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i16, i8*)* @timer_callback_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_callback_2(i32 %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  %7 = alloca %struct.event_and_count*, align 8
  store i32 %0, i32* %4, align 4
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.event_and_count*
  store %struct.event_and_count* %9, %struct.event_and_count** %7, align 8
  %10 = load %struct.event_and_count*, %struct.event_and_count** %7, align 8
  %11 = getelementptr inbounds %struct.event_and_count, %struct.event_and_count* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @event_finalize_callback_2, align 4
  %14 = call i32 @event_finalize(i32 0, i32 %12, i32 %13)
  %15 = load %struct.event_and_count*, %struct.event_and_count** %7, align 8
  %16 = getelementptr inbounds %struct.event_and_count, %struct.event_and_count* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @event_finalize_callback_2, align 4
  %19 = call i32 @event_finalize(i32 0, i32 %17, i32 %18)
  %20 = load %struct.event_and_count*, %struct.event_and_count** %7, align 8
  %21 = getelementptr inbounds %struct.event_and_count, %struct.event_and_count* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %21, align 4
  %24 = load i32, i32* %4, align 4
  %25 = load i16, i16* %5, align 2
  ret void
}

declare dso_local i32 @event_finalize(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
